Thu Apr 28 14:50:05 2005  Jaiganesh Balasubramanian  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Dynamic_Component_Servant_T.cpp:
	* DAnCE/ciao/Dynamic_Component_Servant_T.h:
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.cpp:
	* DAnCE/ciao/Swapping_Servant_Home_Impl_T.h:

	  Made changes to the CIAO infrastructure that allows the
	  swapping capability to make use of the component instance
	  name when we create object references.

Wed Apr 27 11:15:12 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ciao/Container_Base.cpp:
        * DAnCE/ciao/Container_Base.h:
        * DAnCE/ciao/Container_Impl.cpp:
        * DAnCE/ciao/Deployment_Core.idl:
        * DAnCE/ciao/Home_Servant_Impl_T.cpp:
        * DAnCE/ciao/Home_Servant_Impl_T.h:
        * DAnCE/ciao/Servant_Impl_Base.cpp:
        * DAnCE/ciao/Servant_Impl_Base.h:
        
          Some cosmetic changes and changes by Jaiganesh Balasubramanian
          <jai@dre.vanderbilt.edu> to support the passing and storing of
          the component instance name (from the descriptor XML file) in
          the component instance. Also removed the gen_UUID() static 
          method from class Servant_Impl_Base, since it is no longer
          used.
          
        * CIDLC/ServantHeaderGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Changes to servant code generation corresponding with the
          changes above.

Tue Apr 26 18:14:01 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/releasenotes/index.html:
        
          Updated CIDL compiler documentation, and added item about the
          existing IDL3-to-IDL2 coverter.
          
        * tools/IDL3_to_IDL2/README:
        
          Updated documentation file.

Tue Apr 26 11:34:52 2005  Nanbor Wang  <nanbor@tesla.txcorp.com>

	* docs/schema/CIAOServerResources.xsd: Changed some of the XML
	  element and type names to be more consistent with the rest of
	  RTCORBA spec that the following new IDL file follows.
	